split gui rendering function

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Level]
 Pos=60,106
-Size=542,357
+Size=237,212
 Collapsed=0
 
 [Window][Object]
@@ -19,7 +19,12 @@ Size=86,63
 Collapsed=0
 
 [Window][No object selected]
-Pos=634,134
-Size=260,221
+Pos=404,211
+Size=333,294
+Collapsed=0
+
+[Window][Nothing selected]
+Pos=381,57
+Size=312,302
 Collapsed=0
 
