start work on text parser

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=195,125
 Collapsed=0
 
 [Window][Level]
-Pos=60,106
-Size=237,212
+Pos=113,165
+Size=237,213
 Collapsed=0
 
 [Window][Object]
@@ -24,7 +24,12 @@ Size=333,294
 Collapsed=0
 
 [Window][Nothing selected]
-Pos=622,101
-Size=312,302
+Pos=781,201
+Size=494,325
+Collapsed=0
+
+[Window][Warp]
+Pos=688,179
+Size=485,184
 Collapsed=0
 
