add macro and special obj editors

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=195,125
 Collapsed=0
 
 [Window][Level]
-Pos=113,165
+Pos=157,270
 Size=237,213
 Collapsed=0
 
@@ -31,5 +31,15 @@ Collapsed=0
 [Window][Warp]
 Pos=688,179
 Size=485,184
+Collapsed=0
+
+[Window][Macro object]
+Pos=342,73
+Size=303,178
+Collapsed=0
+
+[Window][Special object]
+Pos=792,418
+Size=270,118
 Collapsed=0
 
