add area properties editor

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=195,125
 Collapsed=0
 
 [Window][Level]
-Pos=157,270
-Size=237,213
+Pos=147,515
+Size=224,92
 Collapsed=0
 
 [Window][Object]
@@ -39,7 +39,12 @@ Size=303,178
 Collapsed=0
 
 [Window][Special object]
-Pos=792,418
+Pos=120,283
 Size=270,118
+Collapsed=0
+
+[Window][Area]
+Pos=60,60
+Size=365,161
 Collapsed=0
 
